Inclusão dos NuGet do EntityFrameWork

--- a/LISTATAREFASAPI/appsettings.json
+++ b/LISTATAREFASAPI/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    {
+        "ConnectionStrings": {
+            "DefaultConnection": "workstation id=dbAPIJaum.mssql.somee.com;packet size=4096;user id=JAUM_SQLLogin_1;pwd=nxocjewf5m;data source=dbAPIJaum.mssql.somee.com;persist security info=False;initial catalog=dbAPIJaum;TrustServerCertificate=True"
+        }
     }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
